--- a/src/iSeal.integrationTest1/Properties/launchSettings.json
+++ b/src/iSeal.integrationTest1/Properties/launchSettings.json
@@ -3,28 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44377/",
+      "applicationUrl": "http://localhost:54638/",
       "sslPort": 0
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "iSeal.API": {
+    "iSeal.integrationTest1": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/login",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:54639/"
     }
   }
 }
